[gd_scene load_steps=2 format=3 uid="uid://fxbnlccnb2cd"]

[ext_resource type="Script" path="res://scenes/startup/startup.gd" id="1_snjj3"]

[node name="startup" type="Node2D"]
script = ExtResource("1_snjj3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ui" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="loadcontainer" type="VBoxContainer" parent="CanvasLayer/ui"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -71.0
offset_right = 20.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0

[node name="loadstring" type="Label" parent="CanvasLayer/ui/loadcontainer"]
layout_mode = 2
text = "load string"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/ui/loadcontainer"]
custom_minimum_size = Vector2(300, 32)
layout_mode = 2
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -291.5
offset_top = -20.0
offset_right = 291.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="button_import" type="Button" parent="CanvasLayer/ui/HBoxContainer"]
layout_mode = 2
text = "Import UW1 Data"

[node name="button_save" type="Button" parent="CanvasLayer/ui/HBoxContainer"]
layout_mode = 2
text = "Save Raws File"

[node name="button_load" type="Button" parent="CanvasLayer/ui/HBoxContainer"]
layout_mode = 2
text = "Load Raws File"

[node name="button_generate" type="Button" parent="CanvasLayer/ui/HBoxContainer"]
layout_mode = 2
text = "Generate Resources"

[node name="button_export" type="Button" parent="CanvasLayer/ui/HBoxContainer"]
layout_mode = 2
text = "Export Resources"

[node name="buttons_tools" type="Button" parent="CanvasLayer/ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = 80.5
offset_right = 53.0
offset_bottom = 111.5
grow_horizontal = 2
grow_vertical = 2
text = "Tools"

[node name="button_clear_data" type="Button" parent="CanvasLayer/ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -119.5
offset_right = 88.0
offset_bottom = -88.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Delete Imported Data"

[node name="button_load_raws_and_play" type="Button" parent="CanvasLayer/ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -219.5
offset_right = 80.5
offset_bottom = -188.5
grow_horizontal = 2
grow_vertical = 2
text = "Load Raws, Generate Resources,  and Play"

[node name="button_quit" type="Button" parent="CanvasLayer/ui"]
layout_mode = 0
offset_left = 523.0
offset_top = 475.0
offset_right = 633.0
offset_bottom = 506.0
text = "Quit"

[connection signal="pressed" from="CanvasLayer/ui/HBoxContainer/button_import" to="." method="_on_button_import_pressed"]
[connection signal="pressed" from="CanvasLayer/ui/HBoxContainer/button_save" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="CanvasLayer/ui/HBoxContainer/button_load" to="." method="_on_button_load_pressed"]
[connection signal="pressed" from="CanvasLayer/ui/HBoxContainer/button_generate" to="." method="_on_button_generate_pressed"]
[connection signal="pressed" from="CanvasLayer/ui/HBoxContainer/button_export" to="." method="_on_button_export_pressed"]
[connection signal="pressed" from="CanvasLayer/ui/buttons_tools" to="." method="_on_buttons_tools_pressed"]
[connection signal="pressed" from="CanvasLayer/ui/button_clear_data" to="." method="_on_button_clear_data_pressed"]
[connection signal="pressed" from="CanvasLayer/ui/button_load_raws_and_play" to="." method="_on_button_load_raws_and_play_pressed"]
[connection signal="pressed" from="CanvasLayer/ui/button_quit" to="." method="_on_button_quit_pressed"]
